--- a/ui/html/pages/create.tmpl.html
+++ b/ui/html/pages/create.tmpl.html
@@ -4,19 +4,28 @@
 <form action="/snippet/create" method="POST">
     <div>
         <label for="title">Title:</label>
-        <input type="text" name="title" id="title">
+        {{with .Form.FieldErrors.title}}
+        <label class="error">{{.}}</label>
+        {{end}}
+        <input type="text" name="title" id="title" value="{{.Form.Title}}">
     </div>
     <div>
         <label for="content">Content:</label>
-        <input type="text" name="content" id="content">
+        {{with .Form.FieldErrors.content}}
+        <label class="error">{{.}}</label>
+        {{end}}
+        <input type="text" name="content" id="content" value="{{.Form.Content}}">
     </div>
     <div>
         <label >Delete in:</label>
-        <input type="radio" name="expires" id="expires" checked value="365">
+        {{with .Form.FieldErrors.expires}}
+        <label class="error">{{.}}</label>
+        {{end}}
+        <input type="radio" name="expires" id="expires" {{if (eq .Form.Expires 365)}}checked{{end}} value="365">
         One Year
-        <input type="radio" name="expires" id="expires" value="7">
+        <input type="radio" name="expires" id="expires" value="7" {{if (eq .Form.Expires 7)}}checked{{end}}>
         One Week
-        <input type="radio" name="expires" id="expires" value="1">
+        <input type="radio" name="expires" id="expires" value="1" {{if (eq .Form.Expires 1)}}checked{{end}}>
         One Day
     </div>
     <div>
