--- a/ui/html/base.tmpl.html
+++ b/ui/html/base.tmpl.html
@@ -15,6 +15,9 @@
         </header>
         {{template "nav" .}}
         <main>
+            {{with .Flash}}
+                <div class="flash">{{.}}</div>
+            {{end}}
             {{template "main" .}}
         </main>
         <footer>Powered by <a href='https://golang.org/'>Go</a> in {{.CurrentYear}}</footer>
